feat(header): complete navbar + handle responsive

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -1,5 +1,9 @@
 {
   "end": "You've reached the end !",
   "empty": "Nothing to display",
-  "filters": "Filters"
+  "filters": "Filters",
+  "create_feed": "Create a feed",
+  "create_event": "Create an even",
+  "create_club": "Create a club",
+  "logout": "Disconnect"
 }
