--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -5,5 +5,6 @@
   "create_feed": "Créer un feed",
   "create_event": "Créer un évènement",
   "create_club": "Créer un club",
+  "switch_lang": "Changer de langage",
   "logout": "Se déconnecter"
 }
