--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -6,5 +6,6 @@
   "create_event": "Créer un évènement",
   "create_club": "Créer un club",
   "switch_lang": "Changer la langue",
+  "parameter": "Paramètres",
   "logout": "Se déconnecter"
 }
