--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -6,6 +6,11 @@
   "create_event": "Create an event",
   "create_club": "Create a club",
   "switch_lang": "Switch language",
+  "remove_item": {
+    "title": "Do you want to delete this item?",
+    "content": "Deleting an item is permanent and cannot be undo"
+  },
+  "cancel": "Cancel",
   "parameter": "Parameters",
   "logout": "Disconnect"
 }
