feat(post): allow live post edition

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -12,5 +12,6 @@
   },
   "cancel": "Cancel",
   "parameter": "Parameters",
-  "logout": "Disconnect"
+  "logout": "Disconnect",
+  "save": "Save"
 }
