--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -8,7 +8,13 @@
   "switch_lang": "Switch language",
   "remove_item": {
     "title": "Do you want to delete this item?",
-    "content": "Deleting an item is permanent and cannot be undo"
+    "content": "Deleting an item is permanent and cannot be undo",
+    "complete": "Deletion complete"
+  },
+  "update_item": {
+    "title": "Do you want to save this modifications?",
+    "content": "Editing an item cannot be undo",
+    "complete": "Edition saved"
   },
   "cancel": "Cancel",
   "parameter": "Parameters",
