fix(feed): correct translations

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -17,7 +17,7 @@
     "complete": "Edition saved"
   },
   "cancel": "Cancel",
-  "parameter": "Parameters",
+  "setting": "Settings",
   "logout": "Disconnect",
   "save": "Save"
 }
