--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -7,17 +7,17 @@
   "create_club": "Créer un club",
   "switch_lang": "Changer la langue",
   "remove_item": {
-    "title": "Voulez-vous supprimez cet élèment ?",
-    "content": "Attention, la suppression d'un élèment est définitive",
-    "complete": "Element supprimé"
+    "title": "Voulez-vous supprimez cet élément ?",
+    "content": "Attention, la suppression d'un élément est définitive",
+    "complete": "Elément supprimé"
   },
   "update_item": {
     "title": "Voulez-vous enregistrer ces modifications ?",
-    "content": "Attention, la modification un élèment ne peut-être annulé",
+    "content": "Attention, la modification un élément ne peut-être annulé",
     "complete": "Modifications enregistrées"
   },
   "cancel": "Annuler",
-  "parameter": "Paramètres",
+  "setting": "Paramètres",
   "logout": "Se déconnecter",
   "save": "Sauvegarder"
 }
