feat(comment): add translations

--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -19,5 +19,6 @@
   "cancel": "Annuler",
   "setting": "Paramètres",
   "logout": "Se déconnecter",
-  "save": "Sauvegarder"
+  "save": "Sauvegarder",
+  "write_comment": "Ecris ton commentaire..."
 }
