--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -19,5 +19,6 @@
   "cancel": "Cancel",
   "setting": "Settings",
   "logout": "Disconnect",
-  "save": "Save"
+  "save": "Save",
+  "write_comment": "Write your comment..."
 }
