--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -20,5 +20,7 @@
   "setting": "Settings",
   "logout": "Disconnect",
   "save": "Save",
-  "write_comment": "Write your comment..."
+  "write_comment": "Write your comment...",
+  "published_at": "published at ",
+  "edited_last_at": "last edited at "
 }
