feat(translation): replace element with item in translations

--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -15,7 +15,7 @@
   "archive_item": [
     {
       "title": "Voulez-vous archiver cet élement ?",
-      "content": "Un élément archivé peux devenir inaccessible dans certaines fonctionnalités",
+      "content": "Un élément archivé peut devenir inaccessible dans certaines fonctionnalités",
       "complete": "Elément archivé"
     },
     {
