--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -14,14 +14,14 @@
   },
   "archive_item": [
     {
-      "title": "Do you want to archive this element?",
+      "title": "Do you want to archive this item?",
       "content": "Archiving an item will hide it in some features ",
-      "complete": "Element archived"
+      "complete": "Archived item"
     },
     {
-      "title": "Do you want to unarchive this element?",
+      "title": "Do you want to unarchive this item?",
       "content": "Unarchiving an item will make it visible in features",
-      "complete": "Element unarchived"
+      "complete": "Unarchived item"
     }
   ],
   "update_item": {
