--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -6,6 +6,12 @@
   "administration": "Administration",
   "create_event": "Create an event",
   "create_club": "Create a club",
+  "club_type": {
+  "STUDENT_UNION": "Student Union",
+  "SPORT_UNION": "Sport Union",
+  "ART_UNION": "Art Union",
+  "CLUB": "Club"
+},
   "switch_lang": "Switch language",
   "remove_item": {
     "title": "Do you want to delete this item?",
