--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -6,6 +6,12 @@
   "create_feed": "Créer un feed",
   "create_event": "Créer un évènement",
   "create_club": "Créer un club",
+  "club_type": {
+    "STUDENT_UNION": "BDE",
+    "SPORT_UNION": "BDS",
+    "ART_UNION": "BDA",
+    "CLUB": "Association"
+  },
   "switch_lang": "Changer la langue",
   "remove_item": {
     "title": "Voulez-vous supprimez cet élément ?",
