feat(club): rework on club MR

--- a/src/translations/en/club.json
+++ b/src/translations/en/club.json
@@ -1,5 +1,6 @@
 {
   "galleries": "Galleries",
+  "members": "Members",
   "about": "About",
   "pictures": "pictures",
   "errorFileType": "You can only upload JPG/PNG/GIF file!",
