--- a/src/translations/fr/club.json
+++ b/src/translations/fr/club.json
@@ -1,5 +1,6 @@
 {
   "galleries": "Galleries",
+  "members": "Membres",
   "about": "Description",
   "pictures": "photos",
   "errorFileType": "Vous pouvez seulement télécharger les fichiers de type JPG/PNG/GIF !",
