feat(pills): Move translations to common

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -53,5 +53,10 @@
   "save": "Save",
   "write_comment": "Write your comment...",
   "published_at": "published at ",
-  "edited_last_at": "last edited at "
+  "edited_last_at": "last edited at ",
+  "pills": {
+    "status_archived": "Archived",
+    "status_passed": "Passed",
+    "status_active": "Active"
+  }
 }
