feat(events): translations & start event preview modal

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -11,5 +11,6 @@
     "MEETING": "Meeting"
   },
   "free": "Free",
-  "event": "Event"
+  "event": "Event",
+  "published_only": "Published events only"
 }
