--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -12,5 +12,6 @@
   },
   "free": "Free",
   "event": "Event",
-  "published_only": "Published events only"
+  "published_only": "Published events only",
+  "admin_view": "Admin view"
 }
