feat(discovery): fix yearbook with entityset

--- a/src/translations/en/discovery.json
+++ b/src/translations/en/discovery.json
@@ -1,5 +1,7 @@
 {
-  "placeholder-search": "Search for friends",
+  "welcome": "Welcome on iseplife !",
+  "welcome_description": "",
+  "placeholder-search": "Search a friend...",
   "promotions": "Classes",
   "students": "Students",
   "associations": "Associations"
