--- a/src/translations/fr/event.json
+++ b/src/translations/fr/event.json
@@ -3,12 +3,12 @@
   "month": "Mois",
   "week": "Semaine",
   "type": {
-    "PARTY": "Soirée",
-    "AFTERWORK":  "Afterwork",
-    "CONFERENCE":  "Conférence",
-    "WORKSHOP": "Workshop",
-    "FORMATION": "Formation",
-    "MEETING": "Réunion"
+    "PARTY": "\uD83C\uDF89 Soirée",
+    "AFTERWORK": "\uD83C\uDF7B Afterwork",
+    "CONFERENCE": "\uD83C\uDF99 Conférence",
+    "WORKSHOP": "\uD83D\uDCBB Workshop",
+    "FORMATION": "\uD83D\uDCDA Formation",
+    "MEETING": "\uD83D\uDD14 Réunion"
   },
   "free": "Gratuit",
   "event": "Évènement",
