feat(events): set up ErrorBoundary

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -1,4 +1,6 @@
 {
+  "online": "You are back online !",
+  "offline": "You are now offline",
   "end": "You've reached the end !",
   "empty": "Nothing to display",
   "filters": "Filters",
