--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -1,4 +1,6 @@
 {
+  "online": "De nouveau connecté !",
+  "offline": "Connexion interrompue",
   "end": "Vous avez tous visionné !",
   "empty": "Rien à afficher",
   "filters": "Filtres",
