feat(events): finish modal content

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -13,5 +13,6 @@
   "free": "Free",
   "event": "Event",
   "published_only": "Published events only",
-  "admin_view": "Admin view"
+  "admin_view": "Admin view",
+  "ticket_url": "Buy a ticket"
 }
