--- a/src/translations/fr/event.json
+++ b/src/translations/fr/event.json
@@ -13,5 +13,6 @@
   "free": "Gratuit",
   "event": "Évènement",
   "published_only": "Évènements publiés seulement",
-  "admin_view": "Vue admin"
+  "admin_view": "Vue admin",
+  "ticket_url": "Acheter sa place"
 }
