feat(event): add FeedSelector & club selector in form

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -19,7 +19,8 @@
 				"Start date",
 				"End date"
 			],
-			"location": "Russia"
+			"location": "Russia",
+			"club": "Organiser"
 		}
 	},
 	"day": "Day",
