feat(event): form submission

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -1,7 +1,8 @@
 {
 	"create": {
 		"button": "Create event",
-		"title": "Creation of a new event"
+		"title": "Creation of a new event",
+		"created": "Event created !"
 	},
 	"form": {
 		"label": {
