feat(club): cover picker handler

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -53,6 +53,7 @@
   "setting": "Settings",
   "logout": "Disconnect",
   "save": "Save",
+  "reset": "Reset",
   "write_comment": "Write your comment...",
   "published_at": "published at ",
   "edited_last_at": "last edited at ",
