--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -53,6 +53,7 @@
   "setting": "Paramètres",
   "logout": "Se déconnecter",
   "save": "Sauvegarder",
+  "reset": "Réinitialiser",
   "write_comment": "Ecris ton commentaire...",
   "published_at": "publié à ",
   "edited_last_at": "dernière modification à ",
