feat(club): club admin panel

--- a/src/translations/en/club.json
+++ b/src/translations/en/club.json
@@ -5,5 +5,22 @@
   "about": "About",
   "pictures": "pictures",
   "errorFileType": "You can only upload JPG/PNG/GIF file!",
-  "errorFileSize": "Image must smaller than 2MB!"
+  "errorFileSize": "Image must smaller than 2MB!",
+  "form": {
+    "name": "Association's name",
+    "creation": "Creation date",
+    "description": "Description",
+    "website": "Website",
+    "position": "Position",
+    "role": "Role"
+  },
+  "edit_member": "Manage member",
+  "add_member": "Add a new member",
+  "add": "Add",
+  "role": {
+    "SUPER_ADMIN": "Super Admin",
+    "ADMIN": "Administrator",
+    "PUBLISHER": "Publisher",
+    "MEMBER": "Member"
+  }
 }
