--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -53,6 +53,7 @@
   "setting": "Settings",
   "logout": "Disconnect",
   "save": "Save",
+  "delete": "Delete",
   "reset": "Reset",
   "write_comment": "Write your comment...",
   "published_at": "published at ",
