Apply suggestion to src/translations/en/club.json

--- a/src/translations/en/club.json
+++ b/src/translations/en/club.json
@@ -18,7 +18,7 @@
   "add_member": "Add a new member",
   "remove_member": {
     "title": "Do you want to remove this member ?",
-    "content": "Removing a member is permanent and cannot be undo",
+    "content": "Removing a member is permanent and cannot be undone",
     "complete": "Member removed"
   },
   "add": "Add",
