--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -10,6 +10,7 @@
     "title": "Création d'une galerie",
     "name": "Nom de la galerie",
     "description": "Description",
+    "author": "Auteur",
     "draganddrop": [
       "Importez ici vos photos",
       "Cliquez ou faites glisser vos photos dans la zone de téléchargement.\n Attention les fichiers qui ne sont pas des images ne seront pas envoyés"
