--- a/src/translations/fr/club.json
+++ b/src/translations/fr/club.json
@@ -1,6 +1,6 @@
 {
   "posts": "Publications",
-  "galleries": "Galleries",
+  "galleries": "Galeries",
   "members": "Membres",
   "about": "Découvrir",
   "pictures": "photos",
