--- a/src/translations/en/gallery.json
+++ b/src/translations/en/gallery.json
@@ -18,6 +18,11 @@
     ],
     "create": "Create"
   },
+  "upload_failed":  "Images upload failed",
+  "upload_success": "Images upload successful",
+  "select_img": "Select photos",
+  "add_img": "Add images",
+  "delete_selection": "Delete selected images",
   "empty": "This gallery is empty...",
   "created": "Gallery successfully created !",
   "see_all": "See all galleries"
