feat(gallery): remove images from gallery

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -37,6 +37,7 @@
 	},
 	"free": "Free",
 	"event": "Event",
+	"gallery": "Galleries",
 	"published_only": "Published events only",
 	"admin_view": "Admin view",
 	"ticket_url": "Buy a ticket"
