--- a/src/translations/fr/event.json
+++ b/src/translations/fr/event.json
@@ -37,6 +37,7 @@
 	},
 	"free": "Gratuit",
 	"event": "Évènement",
+	"gallery": "Galeries",
 	"published_only": "Évènements publiés seulement",
 	"admin_view": "Vue admin",
 	"ticket_url": "Acheter sa place"
