--- a/src/translations/en/gallery.json
+++ b/src/translations/en/gallery.json
@@ -23,6 +23,7 @@
   "select_img": "Select photos",
   "add_img": "Add images",
   "delete_selection": "Delete selected images",
+  "selection_delete": "Images successfully removed",
   "empty": "This gallery is empty...",
   "created": "Gallery successfully created !",
   "see_all": "See all galleries"
