feat(home): finish event preview and home page

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -37,6 +37,8 @@
 	},
 	"free": "Free",
 	"event": "Event",
+	"incoming": "Incoming events",
+	"no_events": "No events incoming...",
 	"gallery": "Galleries",
 	"published_only": "Published events only",
 	"admin_view": "Admin view",
