--- a/src/translations/fr/gallery.json
+++ b/src/translations/fr/gallery.json
@@ -9,6 +9,8 @@
   "add": "Ajouter une galerie",
   "form": {
     "title": "Création d'une galerie",
+    "generate_post": "Générer post",
+    "generate_post_help": "Generation automatique d'un post avec la galerie attaché à celui-ci",
     "name": "Nom de la galerie",
     "description": "Description",
     "author": "Auteur",
