feat(event): create event edit form

--- a/src/translations/en/event.json
+++ b/src/translations/en/event.json
@@ -4,6 +4,11 @@
 		"title": "Creation of a new event",
 		"created": "Event created !"
 	},
+	"edit": {
+		"button": "Save modifications",
+		"title": "Edit event",
+		"edited": "Event updated !"
+	},
 	"form": {
 		"label": {
 			"name": "Name",
