--- a/src/translations/fr/event.json
+++ b/src/translations/fr/event.json
@@ -47,6 +47,7 @@
 	"event": "Évènement",
 	"incoming": "Évènements à venir",
 	"no_events": "Aucun évènement à venir...",
+	"feed_filter": "Choisissez les feeds visibles...",
 	"gallery": "Galeries",
 	"published_only": "Évènements publiés seulement",
 	"admin_view": "Vue admin",
