Apply suggestion to src/translations/en/discovery.json

--- a/src/translations/en/discovery.json
+++ b/src/translations/en/discovery.json
@@ -1,6 +1,6 @@
 {
   "welcome": "Welcome on iseplife !",
-  "welcome_description": "Iseplife aimed to regroup all ISEP's student's life in a single platform. whether is about BDE (Student Union) last party or an association's meeting, you should be able to find any information related to ISEP.\n You got ideas to propose or bugs to report. Get involved into the project by joining us on GitHub.",
+  "welcome_description": "Iseplife aimed to regroup all ISEP's student's life in a single platform. whether it's about BDE (Student Union) last party or an association's meeting, you should be able to find any information related to ISEP.\n You got ideas to suggest or bugs to report. Get involved into the project by joining us on GitHub.",
   "purposes": [
     {
       "title": "Share",
