Apply suggestion to src/translations/en/discovery.json

--- a/src/translations/en/discovery.json
+++ b/src/translations/en/discovery.json
@@ -4,7 +4,7 @@
   "purposes": [
     {
       "title": "Share",
-      "description": "Share and find all your best memories and photos of ISEP's event (Party, Afterwork, ...). You can also educate yourself with the supports or documents of formations/workshops (in the case where the organisers share them)"
+      "description": "Share and find all your best memories and pictures of ISEP's event (Party, Afterwork, ...). You can also educate yourself with the supports or documents of formations/workshops (in the case where the organisers share them)"
     },
     {
       "title": "Gather",
