Apply suggestion to src/translations/en/discovery.json

--- a/src/translations/en/discovery.json
+++ b/src/translations/en/discovery.json
@@ -8,7 +8,7 @@
     },
     {
       "title": "Gather",
-      "description": "Find or discover all ISEP's students, whatever are their graduation year (alumni, students, ...). If it's to stalk (nobody's perfect) or to grow your network (because why not \uD83E\uDD37\u200D♂), you got all ISEP at your finger tips."
+      "description": "Find or discover all ISEP's students, whatever their graduation year (alumni, students, ...). If it's to stalk (nobody's perfect) or to grow your network (because why not \uD83E\uDD37\u200D♂), you got all ISEP at your finger tips."
     },
     {
       "title": "Inform",
